<resources>
    <string name="app_name">Prototype</string>
    <string name="add_new_title">Add new contact details</string>
    <string name="name">Name:</string>
    <string name="phone">Phone #:</string>
    <string name="email">Email:</string>
    <string name="emailMenu">Email</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_new">Add New</string>
    <string name="view_all">View All</string>
    <string name="back_arrow">Back arrow</string>
    <string name="contacts">Contacts</string>
    <string name="back">BACK</string>
    <string name="application_list">Application List</string>
    <string name="calendar">Calendar</string>
    <string name="call">Call</string>
    <string name="camera">Camera</string>
    <string name="clock">Clock</string>
    <string name="messaging">Messaging</string>
    <string name="messaging_icon">Messaging icon</string>
    <string name="email_icon">email icon</string>
    <string name="contacts_icon">contacts icon</string>
    <string name="clock_icon">clock icon</string>
    <string name="camera_icon">camera icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="delete">Delete</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="reminders">Alarms</string>
    <string-array name="hours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active_reminders">Active Reminders</string>
    <string name="remember_to">Remember to:</string>
    <string name="at">AT</string>
    <string name="time_divider">:</string>
    <string name="on_these_days">on these days:</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="_00">00</string>
    <string name="delete_arrow">delete arrow</string>
    <string name="ABC">ABC</string>
    <string name="abc">abc</string>
    <string name="def">def</string>
    <string name="ghi">ghi</string>
    <string name="jkl">jkl</string>
    <string name="mno">mno</string>
    <string name="pqrs">pqrs</string>
    <string name="tuv">tuv</string>
    <string name="wxyz">wxyz</string>
    <string name="_1_2_3">1@</string>
    <string name="aa">Aa</string>
    <string name="done">Done</string>
    <string name="space_char">␣</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="e_contact_details">Update Emergency Contact Details</string>
    <string name="number">Number:</string>
    <string name="emergency_nrequirements">Emergency\nRequirements:</string>
    <string name="emergency_medical_info">Emergency Medical Info.</string>
    <string name="current_medical_conditions">Current Medical Conditions</string>
    <string name="allergies">Allergies</string>
    <string name="current_medications">Current Medications</string>
    <string name="blood_type">Blood Type</string>
    <string name="edit">Edit</string>
    <string name="contact_image">contact image</string>
    <string name="tap_emergency_contact">Tap to add \n Emergency \n Contact</string>
    <string name="picture_of_contact">picture of emergency contact</string>
    <string name="image_of_a_phone_calling">Image of a phone calling</string>
    <string name="calling_000">Calling 000</string>
    <string name="confirm">Confirm</string>
    <string name="call_n000">Call\n000</string>
    <string name="new_reminder">Add New Reminder</string>
    <string name="view_reminders">View Reminders</string>
    <string name="time_date_placeholder">TIME\nDATE</string>
    <string name="select">Select</string>
    <string name="tick_button">Tick button</string>
    <string name="keypad">Keypad</string>
    <string name="mute">Mute</string>
    <string name="speaker">Speaker</string>
    <string name="end_call">End Call</string>
    <string name="dial_a_number">Dial a number:</string>
    <string name="flashlight_icon">Flashlight icon</string>
    <string name="flashlight">Flashlight</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="delete_contact">Delete contact?</string>
    <string name="image_of_a_red_cross">image of a red cross</string>
    <string name="reminder">REMINDER</string>
    <string name="address">Address:</string>
    <string name="title">Title</string>
    <string name="emi">EMI</string>
    <string name="tutorial">Tutorial</string>
    <string name="date">Date</string>
    <string name="event_1">Event 1</string>
    <string name="_10_00am">10:00am</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number:</string>
    <string name="cairns">69 Goodenough Road\nCairns</string>
    <string name="message">Message</string>
    <string name="add_new_event">Add new event:</string>
    <string name="event_title">Title:</string>
    <string name="event_date_time"><![CDATA[Date & Time:]]></string>
    <string name="location">Location:</string>
    <string name="notes">Notes:</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="new_message">New Message</string>
    <string name="inbox">Inbox</string>
    <string name="new_alone">New</string>
</resources>