<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOldBG"
    android:orientation="vertical"
    tools:context=".PhoneActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/numberDisplay"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="@style/ColorTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_span="3"
                android:layout_weight="1"
                android:background="@drawable/button_red"
                android:onClick="deleteButton"
                android:text="@string/delete"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_7"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_8"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_9"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_4"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_5"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_6"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_1"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_2"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_3"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/_0"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue_round"
                android:onClick="buttonClicked"
                android:padding="8sp"
                android:text="@string/hash"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                style="@style/ColorTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_span="3"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/call" />
        </TableRow>

    </TableLayout>

</android.widget.LinearLayout>