<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGcolor"
    tools:context=".InCallActivity">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/ColorThemeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/contactImgView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/contact_img"
        app:layout_constraintBottom_toTopOf="@id/keyPadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:contentDescription="@string/contact_image" />

    <Button
        android:id="@+id/keyPadButton"
        style="@style/ColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_aqua"
        android:text="@string/keypad"
        app:layout_constraintBottom_toTopOf="@id/muteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactImgView" />

    <Button
        android:id="@+id/muteButton"
        style="@style/ColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_aqua"
        android:text="@string/mute"
        android:onClick="muteClicked"
        app:layout_constraintBottom_toTopOf="@id/hangUpButton"
        app:layout_constraintEnd_toStartOf="@id/speakerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keyPadButton" />

    <Button
        android:id="@+id/speakerButton"
        style="@style/ColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_aqua"
        android:text="@string/speaker"
        android:onClick="speakerClicked"
        app:layout_constraintBottom_toTopOf="@id/hangUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/muteButton"
        app:layout_constraintTop_toBottomOf="@id/keyPadButton" />

    <Button
        android:id="@+id/hangUpButton"
        style="@style/ColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_red"
        android:onClick="endCall"
        android:text="@string/end_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/muteButton" />


</androidx.constraintlayout.widget.ConstraintLayout>