<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGcolor"
    android:orientation="vertical"
    tools:context=".MessagingActivity">

    <TextView
        style="@style/ColorThemeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/messages" />

    <Button
        style="@style/ColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/button_aqua"
        android:text="@string/new_message"
        android:onClick="newMessageClicked" />

    <Button
        style="@style/ColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/button_aqua"
        android:text="@string/inbox" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_back"
            android:gravity="end"
            android:onClick="onBackPressed"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>