<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ReminderAlertActivity">

    <TextView
        style="@style/ColorThemeInput"
        android:id="@+id/reminderAlertView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reminder"
        android:textSize="42sp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="264dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@drawable/button_red"
        android:onClick="onBackPressed"
        android:padding="16dp"
        android:text="@string/dismiss"
        android:textColor="@color/white"
        android:textSize="32sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@drawable/button_aqua"
        android:onClick="onSnoozePressed"
        android:padding="16dp"
        android:text="@string/snooze"
        android:textColor="@color/white"
        android:textSize="32sp" />
</androidx.appcompat.widget.LinearLayoutCompat>