<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMessageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BGcolor"
        android:orientation="vertical"
        tools:context=".ViewContactsActivity">

        <TextView
            android:id="@+id/contactViewTitle"
            style="@style/ColorThemeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/contactListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="#000"
            android:dividerHeight="2dp"
            android:listSelector="#600"
            android:scrollbarFadeDuration="10"
            android:scrollbarSize="10dp"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@id/buttonLayout"
            app:layout_constraintTop_toBottomOf="@id/contactViewTitle"
            android:focusable="true" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                style="@style/ColorTheme"
                android:id="@+id/backButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginBottom="6dp"
                android:background="@drawable/button_red"
                android:onClick="onBackPressed"
                android:text="@string/back" />

            <Button
                android:id="@+id/newMessageButton"
                style="@style/ColorTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_aqua"
                android:text="@string/new_alone" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Grey out behind view-->
    <LinearLayout
        android:id="@+id/greyScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#B3000000"
        android:visibility="invisible" />

    <!--Central Confirmation Dialog-->
    <LinearLayout
        android:id="@+id/deleteConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorOffRed"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:srcCompat="@android:drawable/ic_delete"
            android:contentDescription="@string/image_of_a_red_cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:text="@string/delete_contact"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_red"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/button_green"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>