<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGcolor"
    android:orientation="vertical"
    tools:context=".ContactViewActivity">

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/picture_of_contact"
            android:src="@drawable/contact_img" />

        <TextView
            android:id="@+id/contactName"
            style="@style/ColorTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Contact Name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/numberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout">

        <TextView
            style="@style/ColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number" />

        <TextView
            android:id="@+id/contactNumber"
            style="@style/ColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/numberLayout">

        <TextView
            style="@style/ColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/contactEmail"
            style="@style/ColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="none@none.com" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/editButtonLayout">

        <Button
            style="@style/ColorTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_aqua"
            android:text="@string/call" />

        <Button
            style="@style/ColorTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_aqua"
            android:text="Message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/backButton"
            style="@style/ColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_red"
            android:layout_weight="1"
            android:onClick="onBackPressed"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editButton"
            style="@style/ColorTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_aqua"
            android:text="@string/edit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>