<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGcolor"
    android:orientation="vertical"
    tools:context=".ContactsActivity">

    <Button
        android:id="@+id/addNewContactButton"
        style="@style/ColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/button_blue"
        android:onClick="addNewClicked"
        android:text="@string/add_new" />

    <Button
        android:id="@+id/viewContactsButton"
        style="@style/ColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/button_blue"
        android:onClick="viewContactsClicked"
        android:text="@string/view_all" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/abc_vector_test"
            android:contentDescription="@string/back_arrow" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:background="@drawable/button_red"
            android:onClick="onBackPressed"
            android:padding="16dp"
            android:text="Back"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />
    </LinearLayout>
</LinearLayout>